flypcv: 'cvtitle' -> 'title' to match article standard.

--- a/flypcv.cls
+++ b/flypcv.cls
@@ -58,14 +58,14 @@
 
 %%%%%%
 
-%%% cvtitle -----------------------------------------------------------------------------
+%%% title -------------------------------------------------------------------------------
 
 % supported header parameters
 %   \author, \title, \location, \email, \phone
-\author{Logan Daniel}
-\title{mathematician, educator.}
+\author{Name}
+\title{title}
 \newcommand{\@location}{New York City, NY, USA}
-\newcommand{\@email}{ldan@gmail.com}
+\newcommand{\@email}{email@domain.com}
 \newcommand{\@phone}{123/456-7890}
 \newcommand{\location}[1]{\renewcommand{\@location}{#1}}
 \newcommand{\contact}[1]{\renewcommand{\@contact}{#1}}
@@ -73,12 +73,12 @@
 \newcommand{\phone}[1]{\renewcommand{\@phone}{#1}}
 
 % title geometry
-\newlength{\cvtitleheight}
-\setlength{\cvtitleheight}{0.5in}
+\newlength{\titleheight}
+\setlength{\titleheight}{0.5in}
 
-% use \makecvtitle to place the title within document
-\newcommand{\makecvtitle}{
-  \begin{minipage}[t][\cvtitleheight][c]{0.5\textwidth}
+% use \maketitle to place the title within document
+\renewcommand{\maketitle}{
+  \begin{minipage}[t][\titleheight][c]{0.5\textwidth}
     \flushleft{{\Huge\bfseries
       \@author
     }}
@@ -86,7 +86,7 @@
       \@title
     }}
   \end{minipage}
-  \begin{minipage}[t][\cvtitleheight][c]{0.5\textwidth}
+  \begin{minipage}[t][\titleheight][c]{0.5\textwidth}
     \flushright{
       \@location\\
       \href{mailto:\@email}{\@email} | \@phone
