format flypcv to textwidth=80.

--- a/flypcv.cls
+++ b/flypcv.cls
@@ -8,27 +8,27 @@
 
 \makeatletter
 
-%%% default font ------------------------------------------------------------------------
+% default font
 \renewcommand{\familydefault}{\sfdefault}
-%%%%%%
+% ------------------------------------------------------------------------------
 
-%%% hyperlinks --------------------------------------------------------------------------
+% hyperlinks
+% ------------------------------------------------------------------------------
 \RequirePackage[colorlinks, urlcolor=blue, linkcolor=black]{hyperref}
-%%%%%%
+% ------------------------------------------------------------------------------
 
-%%% conditional -------------------------------------------------------------------------
-
+% conditionals
+% ------------------------------------------------------------------------------
 \RequirePackage{xifthen}
 
 % thisifthat - expand #1 if #2 is not empty
 \newcommand{\thisifthat}[2]{%%
   \ifthenelse{\isempty{#2}}{}{#1}%%
 }
+% ------------------------------------------------------------------------------
 
-%%%%%%
-
-%%% geometry, footer --------------------------------------------------------------------
-
+% geometry, footer
+% ------------------------------------------------------------------------------
 % remove parindent, parskip
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{0pt}
@@ -55,11 +55,10 @@
 \fancyhf{}
 \fancyfoot[R]{\scriptsize \thepage\ \textit{of}\ \pageref{LastPage}}
 \fancyfoot[L]{\itshape\scriptsize curriculum vitae}
+% ------------------------------------------------------------------------------
 
-%%%%%%
-
-%%% title -------------------------------------------------------------------------------
-
+% title
+% ------------------------------------------------------------------------------
 % supported header parameters
 %   \author, \title, \location, \email, \phone
 \author{Name}
@@ -93,11 +92,10 @@
     }
   \end{minipage}
 }
+% ------------------------------------------------------------------------------
 
-%%%%%%
-
-%%% section definition ------------------------------------------------------------------
-
+% section definition
+% ------------------------------------------------------------------------------
 \RequirePackage{titlesec}
 
 % section geometry
@@ -110,22 +108,24 @@
   {}
   {\sectionsep}
   {}[\titlerule]
+% ------------------------------------------------------------------------------
 
-%%%%%%
 
+% ------------------------------------------------------------------------------
+% cv features
+% ------------------------------------------------------------------------------
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% cv features -------------------------------------------------------------------------
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% the blurb
+% ------------------------------------------------------------------------------
+% blurb - a simple, ital par for brief descriptions below main items or as
+% standalones
 
-%%% the blurb ---------------------------------------------------------------------------
-
-% blurb - a simple, ital par for brief descriptions below main items or as standalones
 \newcommand{\blurb}[1]{\par{\itshape#1}}
 
-%%%%%%
+% ------------------------------------------------------------------------------
 
-%%% cvitem ------------------------------------------------------------------------------
+% cvitem
+% ------------------------------------------------------------------------------
 % generic line item with item, delim, info, and metadata.
 
 % default metaformat (given default since that column looks weird if not uniform)
@@ -141,9 +141,10 @@
   {\@defaultmetaformat#3}%%
 }
 
-%%%%%%
+% ------------------------------------------------------------------------------
 
-%%% custom cvitem -----------------------------------------------------------------------
+% custom cvitem
+% ------------------------------------------------------------------------------
 % format a custom cvitem
 
 % \newcvitem{name}{itemformat}{infoformat}{delim}{infopunct}{vspace}
@@ -155,9 +156,10 @@
   }
 }
 
-%%%%%%
+% ------------------------------------------------------------------------------
 
-%%% define cvitems ----------------------------------------------------------------------
+% define cvitems
+% ------------------------------------------------------------------------------
 
 % headcvitem - for items that act as headers / major items
 \newcvitem{headcvitem}{\bfseries}{}{ | }{}{\headvspace}
@@ -177,6 +179,6 @@
 % referencecvitem
 \newcvitem{referencecvitem}{\rmfamily}{\itshape}{,\ }{}{\headvspace}
 
-%%%%%%
+% ------------------------------------------------------------------------------
 
 \makeatother
