flypcv.cls: \par after cvitems to fix trailing space.

--- a/flypcv.cls
+++ b/flypcv.cls
@@ -144,6 +144,7 @@
   \thisifthat{#4}{#2}#2\thisifthat{#5}{#2}%%
   \thisifthat{\hfill}{#3}%%
   {\@defaultmetaformat#3}%%
+  \par%%
 }
 
 % ------------------------------------------------------------------------------
